[gd_scene load_steps=4 format=2]

[ext_resource path="res://logic/title_screen/title_screen.gd" type="Script" id=1]
[ext_resource path="res://scenes/title_screen/popup_confirm.tscn" type="PackedScene" id=2]
[ext_resource path="res://resources/game_theme.tres" type="Theme" id=3]

[node name="TitleScreen" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 1 )

[node name="PopupConfirm" parent="." instance=ExtResource( 2 )]

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 353.0
margin_bottom = 633.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_editor_description_": ""
}

[node name="MainContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 336.0
margin_bottom = 616.0
custom_constants/separation = 20

[node name="TitleLabel" type="Label" parent="MarginContainer/MainContainer"]
margin_right = 326.0
margin_bottom = 300.0
rect_min_size = Vector2( 0, 300 )
size_flags_vertical = 1
text = "Text Game Prototype"
align = 1
valign = 1
autowrap = true

[node name="ButtonsMargin" type="MarginContainer" parent="MarginContainer/MainContainer"]
margin_top = 320.0
margin_right = 326.0
margin_bottom = 564.0
size_flags_vertical = 3
custom_constants/margin_right = 40
custom_constants/margin_left = 40

[node name="ButtonsContainer" type="VBoxContainer" parent="MarginContainer/MainContainer/ButtonsMargin"]
margin_left = 40.0
margin_right = 286.0
margin_bottom = 244.0
rect_min_size = Vector2( 0, 150 )
custom_constants/separation = 15
alignment = 1

[node name="ContinueButton" type="Button" parent="MarginContainer/MainContainer/ButtonsMargin/ButtonsContainer"]
unique_name_in_owner = true
margin_top = 39.0
margin_right = 246.0
margin_bottom = 69.0
rect_min_size = Vector2( 0, 30 )
focus_mode = 0
enabled_focus_mode = 0
text = "Continue"

[node name="NewButton" type="Button" parent="MarginContainer/MainContainer/ButtonsMargin/ButtonsContainer"]
margin_top = 84.0
margin_right = 246.0
margin_bottom = 114.0
rect_min_size = Vector2( 0, 30 )
focus_mode = 0
enabled_focus_mode = 0
text = "New Game"

[node name="OptionsButton" type="Button" parent="MarginContainer/MainContainer/ButtonsMargin/ButtonsContainer"]
margin_top = 129.0
margin_right = 246.0
margin_bottom = 159.0
rect_min_size = Vector2( 0, 30 )
focus_mode = 0
enabled_focus_mode = 0
text = "Options"

[node name="ExtrasButton" type="Button" parent="MarginContainer/MainContainer/ButtonsMargin/ButtonsContainer"]
margin_top = 174.0
margin_right = 246.0
margin_bottom = 204.0
rect_min_size = Vector2( 0, 30 )
focus_mode = 0
enabled_focus_mode = 0
text = "Extras"

[node name="BottomText" type="Label" parent="MarginContainer/MainContainer"]
margin_top = 584.0
margin_right = 326.0
margin_bottom = 606.0
text = "ver 0.1"
align = 1

[connection signal="pressed" from="MarginContainer/MainContainer/ButtonsMargin/ButtonsContainer/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="MarginContainer/MainContainer/ButtonsMargin/ButtonsContainer/NewButton" to="." method="_on_NewButton_pressed"]
[connection signal="pressed" from="MarginContainer/MainContainer/ButtonsMargin/ButtonsContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="MarginContainer/MainContainer/ButtonsMargin/ButtonsContainer/ExtrasButton" to="." method="_on_ExtrasButton_pressed"]
